# 2dgame

./: CMakeLists.txt  main.cpp
CMakeModules/: FindGLFW3.cmake
src/: logger.h  main.cpp  window.cpp  window.h  window_manager.cpp  window_manager.h
